# HexagonalArchitectureVideoGames

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml
app_videogames/: container.py  main.py
app_videogames/api/: main.py  router.py
app_videogames/api/level/: level_container.py  router.py
app_videogames/api/user/: router.py  user_container.py
app_videogames/api/videogame/: router.py  videogame_container.py
app_videogames/application/level/: __init__.py  delete_level.py  get_levels.py  insert_level.py  update_level.py
app_videogames/application/user/: __init__.py  authenticate_user.py  delete_user.py  get_all.py  get_users.py  insert_user.py  update_user.py  user_crud.py
app_videogames/application/videogame/: __init__.py  delete_videogame.py  get_videogames.py  insert_videogame.py  update_videogame.py
app_videogames/domain/level/: __init__.py  level.py  level_repository.py
app_videogames/domain/level/value_object/: __init__.py  difficulty.py  last_game_date.py  level_name.py
app_videogames/domain/user/: __init__.py  user.py  user_exception.py  user_repository.py
app_videogames/domain/user/value_object/: __init__.py  email.py  (+2 more)
app_videogames/domain/videogame/: __init__.py  videogame.py  videogame_repository.py
app_videogames/infrastructure/api/: main.py
app_videogames/infrastructure/sqlite/: __init__.py  database.py  open_session.py  session_com_rol_clo.py
app_videogames/usecase/user/: __init__.py  user_command_model.py  user_command_usecase.py  user_query_model.py  user_query_service.py  user_query_usecase.py
db/: app_videogames.db
(+40 files in other folders)
