[tool.poetry]
name = "app_videogames"
version = "1.0.1"
description = "App videogames with DDD"
authors = ["kjduy <k.vn.jdh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
pylint = "^2.6.2"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.3.23"
pydantic = "^1.7.3"
fastapi = "^0.63.0"
pyjwt = "^2.3.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
dependency-injector = "^4.31.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
